--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "daisyui": "^5.0.35",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router": "^7.6.0"
+    "react-router": "^7.6.0",
+    "sweetalert2": "^11.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
